# CS3110_OCaml_Programming

./: .gitignore  README.md  main.ml
dune_project/my_proj/: dune-project
dune_quickstart/my_proj/lib/: dune
dune_quickstart/my_proj/test/: dune
dune_quickstart/project_name/: dune-project
dune_quickstart/project_name/lib/: dune
dune_quickstart/project_name/test/: dune
feather/: Pokemons.ml  annotation_parameter.ml  associated_map.ml  compile_unit_stack.ml  compile_unit_stack.mli  dune  exceptions.ml  filter_and_tr_function.ml  folds.ml  function_tr.ml  functors.ml  high_order_function.ml  lists.ml  m_map_in_stdlib.ml  main.ml  maps.ml  maps_adt.ml  match.ml  modules.ml  natural_number.ml  options.ml  options_quene_stack.ml  pattern_matching.ml  queues.ml  records.ml  refs.ml  sets.ml  sig_encapsulation.ml  sigmatch.ml  signatures.ml  singly_linked_list.ml  stacks.ml  takedrop.ml  test_feather.ml  trees.ml  trees_map_folder.ml  type.ml  usefunctor.ml  variants.ml
feather/TDD/: nextday.ml  test.ml
feather/chapter78/: arrays.ml  counter.ml  dune  include_VS_open.ml  lwt_examples.ml  map_and_set.ml  maps_assoc.ml  maps_dirct_addr.ml  maps_hashtbl.ml  maps_review.ml  memoization.ml  monads.ml  promises.ml  read2.ml  read3.ml  refs.ml  sequences.ml  sequences_lazy.ml
feather/chapter9/calc_menhir_ocamllex_improve/: .ocamlinit  README.md  ast.ml  cal_test.ml  calc.ml  dune  lexer.mll  main.ml  makefile  parser.mly
feather/chapter9/calculator_menhir_ocamllex/: main  main.ml  makefile  my_lexer.ml  my_parser.ml  my_parser.mli  parser.mly
feather/chapter9/calculator_ocamlyacc_ocamllex/: cal_test.ml  dune  lexer.mll  makefile  parser.mly
feather/chapter9/lambda-env/src/: parser.mly
feather/chapter9/lambda-env/test/: main.ml
feather/chapter9/simpl/: Makefile
feather/chapter9/simpl_mv_env/: Makefile
feather/chapter9/simpl_mv_env/lib/: ast.ml  dune  main.ml  my_lexer.mll  my_parser.mly
feather/chapter9/simpl_mv_env/test/: main.ml
feather/chapter9/simpl_my_version/lib/: ast.ml  dune  main.ml  my_lexer.mll  my_parser.mly
feather/chapter9/simpl_my_version/test/: main.ml
feather/compile_ocaml/: dune  hello.ml
feather/exercises/: algerbra.ml  bsts.ml  bsts_test.ml  dune  fast_fibonacci.ml  fractions.ml  fractions_test.ml  list_sort_uniq.ml  matrix_init_normalize.ml  matrixs_tests.ml  qchecks.ml  takedrop.ml
feather/ocamllex_yacc_tutorial/: calc.ml  makefile
feather/qcheck_tutorial/: Random_test.ml  double.ml  dune  qcheck_step.ml
feather/test_for_sum/: dune  sum.ml  test.ml
feather/test_tmp/: bsts.ml  bsts_test.ml  dune  mapstd_test.ml  quick_test.ml  red_black_functor.ml  red_black_functor_test.ml
foraml_vertification/: factorial.txt  lenght (lst1 @ lst2 ) = length lst1 + length lst2 .txt  length (preorder t)  = size t.txt  lists @ [] = list.txt  natural_num.txt  trees.txt
ocaml-red-black-trees/src/: red_black_tree.ml
tmp_bisect/: bsts.ml  bsts_test.ml  dune  fractions.ml  fractions_test.ml  leap_year.ml  maps_review.ml  maps_review_test.ml  matrixs_tests.ml  quick_test.ml
type_reference/: reference relation.txt  substitution_as_solution.txt  worked_example.txt
