; (executable
;  (name usefunctor)
;  (libraries ounit2)
;  (flags (:standard -w -32 -warn-error -32)))

; (executable
;  (name test_feather)
;  (libraries ounit2))

; (executable
;  (name annotation_parameter)
;  (flags (:standard -w -32 -warn-error -32))
; )

; (executable
;  (name maps_assoc)
;  (flags (:standard -w -32 -warn-error -32))
; )

; (executable
;  (name maps_dirct_addr)
;  (flags (:standard -w -32 -warn-error -32))
; )

; (executable
;  (name refs)
;  (flags (:standard -w -32 -warn-error -32))
; )


; (executable
;  (name maps_review_test)
;  (libraries ounit2)
;  (flags (:standard -w -32 -warn-error -32))
; )


; (executable
;  (name sequences)
;  ; (libraries ounit2)
;  (flags (:standard -w -32-34-37 -warn-error -32-34))
; )


; (executable
;  (name lwt_examples)
;  (libraries lwt lwt.unix)
;  (flags (:standard -w -32-33-34-37 -warn-error -32-34))
; )


; (executable
;  (name read2)
;  (libraries lwt.unix))

(executable
 (name read3)
 (libraries lwt.unix lwt_ppx))