; (executable
;  (name usefunctor)
;  (libraries ounit2)
;  (flags (:standard -w -32 -warn-error -32)))

; (executable
;  (name fast_fibonacci )
;  (flags (:standard -w -32 -warn-error -32)))

; (executable
;  (name takedrop)
;  (libraries ounit2)
;  (flags (:standard -w -32 -warn-error -32)))


; (executable
;  (name fractions_test)
;  (libraries ounit2)
;  (flags (:standard -w -32 -warn-error -32)))

 (executable
 (name quick_test)
 (libraries ounit2 qcheck)
 (flags (:standard -w -32 -warn-error -32)))

 ; (executable
 ; (name quick_test)
 ; (libraries ounit2)
 ; (flags (:standard -w -32 -warn-error -32)))